# Kalshi

./: .coveragerc  .env.example  .gitignore  AGENTS.md  AIDER_MASTER_PROMPT.md  DEFINITIONS.md  DEPLOYMENT_AUDIT.md  IDENTITY.md  PLAN-MODE-VALIDATION.md  PROMPT.md  README.md  prd.json  prd.md  progress.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.streamlit/: config.toml
data/cities/: cities.json
deployment/logrotate/: milkbot
deployment/nginx/: milkbot.conf
deployment/scripts/: backup-database.sh  deploy.sh  healthcheck.sh  optimize-database.sh  restore-database.sh  run-load-test.sh
deployment/systemd/: milkbot-analytics.service  milkbot-dashboard.service  milkbot-rollups.service  milkbot-rollups.timer  milkbot-trader.service  milkbot-trader.timer
docs/: ARCHITECTURE_DIAGRAM.md  BINARY_ROGUE_DESIGN_TEMPLATE.html  BINARY_ROGUE_DESIGN_TEMPLATE.md  DEMO_TO_LIVE_PLAYBOOK.md  DEPLOYMENT_RUNBOOK.md  DESIGN_SYSTEM.html  DESIGN_SYSTEM.md  MILKBOT_COMPLETE_DESIGN_SPEC_CORRECTED.txt  MILKBOT_QUICK_REFERENCE.txt  OPERATOR_RUNBOOK.md  PERFORMANCE_TESTING.md  SECURITY_AUDIT_CHECKLIST.md  binary-rogue.css  milkbot_colors_CORRECTED.csv  openapi.yaml
docs/templates/: binary-rogue-boilerplate.html  clock.js
scripts/: fetch_nws_grids.py
specs/: 00_INDEX.md  01_PRD.md  02_ARCHITECTURE.md  03_TECH_SPEC.md  04_DATA_MODEL.md  05_API_CONTRACTS.md  06_UI_SPEC.md  07_DEPLOYMENT_RUNBOOK.md  08_SECURITY_COMPLIANCE.md  09_TESTING_QA.md  10_OPERATIONS_SRE.md  11_DEMO_TO_LIVE_PLAYBOOK.md  12_LLM_OPENROUTER_POLICY.md  13_CITY_CONFIG.md  14_BACKTEST_DATA_PLAN.md  15_STRATEGY_SPEC.md  16_RISK_POLICY.md  17_OMS_SPEC.md  18_OBSERVABILITY.md  19_CONFIG_REFERENCE.md  20_MIGRATIONS.md  21_CLOUDFLARE_NGINX.md  22_PUBLIC_DISCLOSURE_POLICY.md
src/: __init__.py
src/analytics/: __init__.py  api.py  health.py  opportunity_detector.py  rollups.py  signal_generator.py  weather_processor.py
src/dashboard/: __init__.py  app.py  components.py  (+1 more)
tests/: conftest.py
(+104 files in other folders)
